--- a/ConfluxMobile/Conflux.UI/Views/EventDetails.xaml
+++ b/ConfluxMobile/Conflux.UI/Views/EventDetails.xaml
@@ -136,7 +136,7 @@
             <Grid Grid.Row="1" Margin="0, 10, 0, 5" >
                 <Grid>
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="220"/>
+                        <RowDefinition Height="Auto"/>
                         <RowDefinition Height="*"/>
                     </Grid.RowDefinitions>
                     <Grid Grid.Row="0" Tapped="OnGetEventDirectionClicked">
@@ -264,7 +264,7 @@
             </Grid.Resources>
             <StackPanel Grid.Row="0" Margin="19,0,0,0">
                 <TextBlock Text="SELECT MAP APP" Style="{ThemeResource MessageDialogTitleStyle}" Margin="0,12"/>
-                <TextBlock Text="Open the event with :" Margin="0, 0, 0, 20"
+                <TextBlock Text="Display the event using :" Margin="0, 10, 0, 30"
                        Style="{StaticResource MessageDialogContentStyle}"/>
 
                 <ListView ItemsSource="{Binding MapAppsOptions}" SelectionChanged="OnMapAppItemSelectionChanged">
@@ -278,7 +278,7 @@
                         </DataTemplate>
                     </ListView.ItemTemplate>
                 </ListView>
-                <CheckBox Content="Remember this answer"></CheckBox>
+                <CheckBox Content="Remember this answer" Margin="0, 10"/>
                 <Button Content="Cancel" Tapped="OnMapSelectionCancelTapped"></Button>
             </StackPanel>
         </Grid>
