--- a/ConfluxMobile/Conflux.UI/Views/MainHub.xaml
+++ b/ConfluxMobile/Conflux.UI/Views/MainHub.xaml
@@ -101,20 +101,20 @@
                                               Background="{Binding Visited, Converter={StaticResource VisitedEventColorConverter}}">
                                         </Grid>
                                         <TextBlock Grid.Row="0" Grid.Column="1"
-                                                   Padding="10, 0, 5, 2"
+                                                   Margin="10, 0, 5, 2"
                                                    TextWrapping="Wrap" TextTrimming="CharacterEllipsis" MaxLines="3"
                                                    FontSize="22"
                                                    Text="{Binding Event.Title}"
                                                    ContinuumNavigationTransitionInfo.IsExitElement="True"/>
-                                        <TextBlock Grid.Row="1" Grid.Column="1" Padding="10, 2, 5, 5"
+                                        <TextBlock Grid.Row="1" Grid.Column="1" Margin="10, 2, 5, 5"
                                                    Visibility="{Binding Event.StartTime, Converter={StaticResource NullToVisibilityConverter}}"
                                                    Text="{Binding Event.StartTime, Converter={StaticResource DateSentenceConverter}, ConverterParameter='Start'}"
                                                    Foreground="{StaticResource MidBrush}"/>
-                                        <TextBlock Grid.Row="2" Grid.Column="1" Padding="10, 2, 5, 5"
+                                        <TextBlock Grid.Row="2" Grid.Column="1" Margin="10, 2, 5, 5"
                                                    Visibility="{Binding Event.EndTime, Converter={StaticResource NullToVisibilityConverter}}"
                                                    Text="{Binding Event.EndTime, Converter={StaticResource DateSentenceConverter}, ConverterParameter='End'}"
                                                    Foreground="{StaticResource MidBrush}"/>
-                                        <TextBlock Grid.Row="3" Grid.Column="1" Padding="10, 0, 5, 2"
+                                        <TextBlock Grid.Row="3" Grid.Column="1" Margin="10, 0, 5, 2"
                                                    Visibility="{Binding Event.Location, Converter={StaticResource NullToVisibilityConverter}}"
                                                    TextWrapping="Wrap" TextTrimming="CharacterEllipsis"
                                                    FontSize="16"
