--- a/ConfluxMobile/Conflux.UI/Views/EventDetails.xaml
+++ b/ConfluxMobile/Conflux.UI/Views/EventDetails.xaml
@@ -328,7 +328,7 @@
                         </DataTemplate>
                     </ListView.ItemTemplate>
                 </ListView>
-                <CheckBox Content="Remember this answer" Margin="0, 10"/>
+                <CheckBox Content="Remember my choice" Margin="0, 10"/>
                 <Button Content="Cancel" Tapped="OnMapSelectionCancelTapped"></Button>
             </StackPanel>
         </Grid>
